# TD-Arena

./: .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  Pipfile  README.md  TD-Arena-Editor.toe  TD-Arena-Render.tox  TD-Arena-Server.toe  TD-Arena.Render.tox  TD-Arena.Settings.json  TD-Arena.toe  TD-Arena.toe.REMOVED.git-id  pyproject.toml
.github/workflows/: td-arena-tests.yml
.pre-commit-hooks/: check-large-files.py  yapf-isort.ps1  yapf-isort.sh  yapf-ruff.ps1
Docs/: parameter-flow.excalidraw
Docs/images/: ui.png.REMOVED.git-id
Lib/: TdArena.py  base_log.tox  conftest.py  engine-test.tox  oscDispatcher.py  oscDispatcher_test.py  tda.py  tdaTesting.py  tdaTesting_test.py  tdaUtils.py  tdaUtils_test.py  tda_ext.py  win32.py
Lib/AudioAnalysis/: AudioAnalysis.tox  AudioAnalysisUI.tox
Lib/BrowserUI/: BrowserUI.py  BrowserUI.tox
Lib/ClipCtrl/: ClipCtrl.py  ClipCtrl.tox
Lib/ClipLauncher/: ClipLauncher.tox
Lib/ClipLauncherUI/: ClipLauncherUI.tox
Lib/ClipManager/: ClipManager.py  ClipManager.tox
Lib/ClipUI/: ClipUI.py  ClipUI.tox
Lib/Composition/: Composition.py  Composition.tox
Lib/CompositionCtrl/: CompositionCtrl.py  CompositionCtrl.tox
Lib/DebugUI/: Debug.tox  DebugUI.py  DebugUI.tox  LogCollector.py  LogFormatter.py
Lib/DebugUI/LogManager/: LogFormatter.py  LogManager.py  LogManager.tox
Lib/DebugUI/LogManager/LogHandle/: LogCollector.py  LogHandle.py  LogHandle.tox
Lib/DeckCtrl/: DeckCtrl.py  DeckCtrl.tox
Lib/DeckManager/: DeckManager.py  DeckManager.tox
Lib/LayerCtrl/: LayerCtrl.py  LayerCtrl.tox
Lib/Logger/: Logger.py  Logger.tox  json_log_formatter.py  log_manager.py  logger_ext.py  logging_mixins.py  utils.py  utils_test.py
Lib/MidiManager/: MidiManager.py  MidiManager.tox  apc40Mk2_Color.tox  map_apc40-mkii.tox
Lib/MovieBrowser/: MovieBrowser.py  MovieBrowser.py.5a17f65604b36b13500627367700c6c2.py  MovieBrowser.tox
Lib/MovieBrowserUI/: MovieBrowserUI.py  MovieBrowserUI.tox
Lib/MovieSource/: MovieSource.py  MovieSource.tox
Lib/OSC/Dispatcher/: Dispatcher.py  Dispatcher.tox  Dispatcher_test.py
Lib/Paths/: Paths.py  Paths.tox
Lib/Render/: Render.tox  Render.tox.REMOVED.git-id
Lib/Render/ClipCtrl/: ClipCtrl.py  ClipCtrl.tox
Lib/Render/ClipCtrl/MovieSource/: MovieSource.py  MovieSource.tox
Lib/Render/ClipCtrl/ToxSource/: ToxSource.py  ToxSource.tox
Lib/Render/Composition/: CompositionContainer.tox
Lib/Render/CompositionCtrl/: CompositionCtrl.py  CompositionCtrl.tox
Lib/Render/DeckCtrl/: DeckCtrl.py  DeckCtrl.tox  syncThumbnails.py
Lib/Render/EffectCtrl/: EffectCtrl.py  EffectCtrl.tox
Lib/Render/LayerCtrl/: LayerCtrl.py  LayerCtrl.tox
Lib/Render/ParameterCtrl/: ParameterCtrl.py  ParameterCtrl.tox
Lib/Render/State/: RenderState.py  State.py  State.tox  StateRender.py
Lib/Render/Thumbnails/: Thumbnails.py  Thumbnails.tox
Lib/SaveAllToxes/: SaveAllToxes.py  SaveAllToxes.tox
Lib/ToxManager/: ToxManager.py  ToxManager.tox  button_callbacks.py  datexec_toggleSelectedButtonVisibility.py  opfind_externalToxes_callbacks.py  script_processToxList_callbacks.py  toxLister_callbacks.py
Lib/ToxSource/: ToxSource.py  ToxSource.tox
Lib/UI/: UI.py  ui copy.tox  ui.tox
Lib/UI/AppBar/: AppBar.py  AppBar.tox  TopMenuCallbacks.py  TopMenuDefine.table  TopMenuDefine.tsv
Lib/UI/Browser/: BrowserUI.py  BrowserUI.tox
Lib/UI/Clip/: ClipUI.py  ClipUI.tox
Lib/UI/ClipLauncher/: ClipLauncherUI.tox
Lib/UI/ClipLauncher/Layer/: Layer.py
Lib/UI/DragCtrl/: DragCtrl.py  DragCtrl.tox  DropControlsOverlay.frag
Lib/UI/Grid/: Grid.py  Grid.tox
Lib/UI/LoadingScreen/: LoadingScreen.tox
Lib/UI/Parameters/: Parameters.py  Parameters.tox  Parameters_test.py  createAddressAndSortColumns_callbacks.py  on_ctrl_value_parexec.py
Lib/UI/PerformanceMonitor/: PerformanceMonitor.tox
Lib/UI/PerformanceMonitor/StatMonitor/: StatMonitor.tox
Lib/UI/State/: State.py  StateUI.py  State_test.py  UIState.py
Lib/UI/Theme/: Theme.tox  clipThumbBorder.frag
Lib/UserSettings/: UserSettings.py  UserSettings.tox
Lib/audio_analysis/: audio_analysis.tox  audio_analysis_ui.tox
Lib/auto_module/: auto_module.tox  auto_module_ext.py  ext.py  on_start.py
Lib/debug_ui/: debug_ui.tox  debug_ui_ext.py
Lib/log_manager/: ext.py  log_collector.py  log_collector_ext.py  log_handle.py  log_handle.tox  log_handle_ext.py  log_manager.tox  log_manager_ext.py  script_process_logs_callbacks.py
Lib/midi_manager/: midi_controllers.py  midi_device_apc40_ext.py  midi_device_ext.py  midi_device_ext_test.py  midi_manager.tox  midi_manager_ext.py
Lib/osc/: dispatcher.py  dispatcher_test.py
Lib/ui_clip_launcher/: layer_ext.py
Lib/ui_state/: ui_state_ext.py  ui_state_ext_test.py
docs/images/: 2020-05-20-ui.png.REMOVED.git-id
typings/: __builtins__.pyi
typings/td/: ArcBallExt.pyi  ListerExt.pyi  PopDialogExt.pyi  PopMenuExt.pyi  TDCallbacksExt.pyi  TDCodeGen.pyi  TDFunctions.pyi  TDJSON.pyi  TDStoreTools.pyi  TreeListerExt.pyi  Updater.pyi  __init__.pyi
