[tool.poetry]
authors = ["Steven Nance <steven@somniumrecordings.com>"]
description = "Resolume Arena inspired (clone) TouchDesigner runtime for live shows."
license = "MIT"
name = "td-arena"
packages = []
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.9.5"
python-statemachine = "^2.1.0"

[tool.poetry.group.td.dependencies]
# Dependencies from touchdesigner
numpy = "=1.20.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pylint = "^2.17.2"
pyright = "^1.1.302"
pytest = "^7.3.0"
rope = "^1.7.0"
ruff = "^0.0.261"
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.yapf]
based_on_style = "pep8"
continuation_align_style = "valign-right"
continuation_indent_width = 1
dedent_closing_brackets = true
indent_width = 1
split_complex_comprehension = true
use_tabs = true

[tool.pylint.'MASTER']
disable = [
  "attribute-defined-outside-init",
  "bare-except",
  "broad-except", # Coverd by BLE
  "duplicate-code",
  "fixme",
  "invalid-name",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-arguments", # Covered by PLR0913
  "too-many-locals",
  "too-many-branches", # Covered by PLR0912
  "too-many-statements", # Covered by PLR0915
  "too-many-instance-attributes",
  "undefined-variable", # Covered by F821
  "unused-argument", # Covered by ARG0002
  "unused-import", # Covered by F
]
indent-after-paren = 1
indent-string = "\t"
init-hook = "import sys; sys.path.append('Lib')"

[tool.ruff]
ignore = [
  "A003",
  "ANN101",
  "ANN201",
  "ANN204",
  "COM", # Covered by yapf
  "D", # Extensive docs not really needed
  "ERA", # Too many false positives
  "E501",
  "EM", # Inline error messages are fine for me
  "INP", # Using __init__.py to track migration to new pattern
  "N", # one day
  "PGH003",
  "S", # only running locally, not worried about securiy
  "TRY003",
  "W191",
]
select = [
  "ALL",
]
target-version = "py39"

builtins = [
  "absTime",
  "baseCOMP",
  "Cell",
  "COMP",
  "CHOP",
  "DAT",
  "debug",
  "op",
  "OP",
  "parent",
  "PaneType",
  "ParMode",
  "Par",
  "project",
  "run",
  "tableDAT",
  "textDAT",
  "tdu",
  "ui",
  "WindowsError",
]
exclude = [
  # TODO: include stubs and add PYI rule to directory
  "typings",
]

[tool.pyright]
ignore = [
  # TODO: remove these as modules are migrated over to new patterns
  "Lib/Logger/Logger.py",
  "Lib/Render/ClipCtrl/ClipCtrl.py",
  "Lib/Render/DeckCtrl/DeckCtrl.py",
  "Lib/Render/EffectCtrl/EffectCtrl.py",
  "Lib/ToxManager/ToxManager.py",
  "Lib/ToxManager/button_callbacks.py",
  "Lib/ToxManager/datexec_toggleSelectedButtonVisibility.py",
  "Lib/ToxManager/script_processToxList_callbacks.py",
  "Lib/UI/AppBar/AppBar.py",
  "Lib/UI/Clip/ClipUI.py",
  "Lib/UI/DragCtrl/DragCtrl.py",
  "Lib/UI/Grid/Grid.py",
  "Lib/UI/Parameters/on_ctrl_value_parexec.py",
  "Lib/UI/Parameters/Parameters_test.py",
  "Lib/UI/Parameters/Parameters.py",
]
include = [
  "Lib",
]

[tool.ruff.per-file-ignores]

"*_test.py" = ["PLR2004"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
